; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/win-capture/inject-helper/extr_inject-helper.c_inject_library_full.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/win-capture/inject-helper/extr_inject-helper.c_inject_library_full.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PROCESS_ALL_ACCESS = common dso_local global i32 0, align 4
@INJECT_ERROR_OPEN_PROCESS_FAIL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*)* @inject_library_full to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @inject_library_full(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %7 = load i32, i32* @PROCESS_ALL_ACCESS, align 4
  %8 = load i32, i32* %3, align 4
  %9 = call i64 @open_process(i32 %7, i32 0, i32 %8)
  store i64 %9, i64* %5, align 8
  %10 = load i64, i64* %5, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %18

12:                                               ; preds = %2
  %13 = load i64, i64* %5, align 8
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @inject_library(i64 %13, i32* %14)
  store i32 %15, i32* %6, align 4
  %16 = load i64, i64* %5, align 8
  %17 = call i32 @CloseHandle(i64 %16)
  br label %20

18:                                               ; preds = %2
  %19 = load i32, i32* @INJECT_ERROR_OPEN_PROCESS_FAIL, align 4
  store i32 %19, i32* %6, align 4
  br label %20

20:                                               ; preds = %18, %12
  %21 = load i32, i32* %6, align 4
  ret i32 %21
}

declare dso_local i64 @open_process(i32, i32, i32) #1

declare dso_local i32 @inject_library(i64, i32*) #1

declare dso_local i32 @CloseHandle(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
